GNOME Bugzilla – Bug 767693
Should use U64_TO_POINTER to avoid error on 32bit
Last modified: 2016-06-15 22:09:07 UTC
Created attachment 329856 [details] [review] callgraph: Use U64_TO_POINTER building for i586 results in "cast to pointer from integer of different size" in sp_callgraph-view.c:build_functions_store(). This seems like a missing U64_TO_POINTER(), attaching a patch.
Thanks! LGTM Attachment 329856 [details] pushed as 329743c - callgraph: Use U64_TO_POINTER