callgraph: Use U64_TO_POINTER

This fixes a "cast to pointer from integer of different size" on i586.

https://bugzilla.gnome.org/show_bug.cgi?id=767693